# CASTanet

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  main.py  pypi_readme.md  pyproject.toml
.github/: cspell.json
castanet/: __init__.py  counter.py  generate_trees.py  main.py  matcher.py  practice_libcst.py  say_hello.py  visitor.py
castanet.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
comment/: lab02.py  pract3.py  practice.py  practice2.py  test2.py
hello/: __init__.py  say_hello.py  test-for.py  test-while.py  test.py
test_files/: blackjack.py  classdefs.py  comments.py  funcdefs_test_file.py  loops.py  test.py
tests/: __init__.py  counter_test.py  if_tests.py  test_castanet.py  test_comment.py  test_counter.py  test_generator.py  test_if.py  test_main.py
tests/files_for_tests/: small_test.py
