[tool.poetry]
name = "CASTanet"
version = "1.3.0"
description = "Program to identify different syntax markers in Python programs"
authors = ["Thomas Antle, Caden Hinckley, Maddy Kapfhammer, Bailey Matrascia, Nolan Thompson"]
readme = "pypi_readme.md"
homepage = "https://github.com/cmpsc-481-s22-m1/CASTanet"
repository = "https://github.com/cmpsc-481-s22-m1/CASTanet"
license = "AC"

[tool.poetry.scripts]
castanet = "castanet.main:app"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
libcst = "^0.4.0"
typer = {extras = ["all"], version = "^0.4.0"}
prettyprint = "^0.1.5"

[tool.poetry.dev-dependencies]
taskipy = "^1.9.0"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pylint = "^2.12.2"

[tool.taskipy.tasks]
test = "pytest --cov-report term-missing --cov-fail-under=70  --cov-branch --cov=castanet tests/"
lint = "pylint castanet/ tests/"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
